--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,24 @@
         <div class="row">
             <h1>Contact</h1>
         </div>
+        <div class="row">
+            <form>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Name</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="John Appleseed">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Email</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Johnappleseed@email.com">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1"> Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
     </div>
     <nav class="navbar fixed-bottom navbar-light" style="background-color: darkkhaki">
         <a class="navbar-brand">Copyright</a>
