--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
      <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: darkkhaki">
@@ -45,7 +46,9 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi tempore ipsum ullam, cumque alias non quis deleniti ad at? Exercitationem, non! Dicta cumque totam consequatur placeat adipisci eum praesentium neque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sunt aliquam, minima dolores tempora commodi tenetur quo veritatis, maxime nemo magni illo. Recusandae quo dignissimos odio sed, reiciendis dolores rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus assumenda delectus reiciendis, iure excepturi autem explicabo doloribus porro doloremque molestiae maxime vero ex sed mollitia sapiente expedita quam aspernatur recusandae?</p>
         </div>
         <div class="row mt-2">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi tempore ipsum ullam, cumque alias non quis deleniti ad at? Exercitationem, non! Dicta cumque totam consequatur placeat adipisci eum praesentium neque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sunt aliquam, minima dolores tempora commodi tenetur quo veritatis, maxime nemo magni illo. Recusandae quo dignissimos odio sed, reiciendis dolores rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus assumenda delectus reiciendis, iure excepturi autem explicabo doloribus porro doloremque molestiae maxime vero ex sed mollitia sapiente expedita quam aspernatur recusandae?</p>
+             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi tempore ipsum ullam, cumque alias non quis deleniti ad at? Exercitationem, non! Dicta cumque totam consequatur placeat adipisci eum praesentium neque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut sunt aliquam, minima dolores tempora commodi tenetur quo veritatis, maxime nemo magni illo. Recusandae quo dignissimos odio sed, reiciendis dolores rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus assumenda delectus reiciendis, iure excepturi autem explicabo doloribus porro doloremque molestiae maxime vero ex sed mollitia sapiente expedita quam aspernatur recusandae?</p>
+
+             <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quidem, culpa unde inventore repudiandae aliquam, temporibus dolorum enim quae ex sit eos molestias iste dolor alias voluptatem obcaecati a quibusdam.</h2>
         </div>
     </div>
     <nav class="navbar fixed-bottom navbar-light" style="background-color: darkkhaki">
