--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: darkkhaki">
@@ -30,24 +31,24 @@
     <br><br><br>
     <div class="container">
         <div class="row">
-            <h1>Contact</h1>
+            <h1> Contact</h1>
         </div>
         <div class="row">
             <form>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Name</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="John Appleseed">
+                    <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="John Appleseed">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Email</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Johnappleseed@email.com">
+                    <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Johnappleseed@email.com">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlTextarea1"> Message</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary" style="background-color: darkkhaki ">Submit</button>
             </form>
         </div>
     </div>
