--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,8 @@
             </form>
         </div>
     </div>
-    <nav class="navbar fixed-bottom navbar-light" style="background-color: darkkhaki">
-        <a class="navbar-brand">Copyright</a>
-    </nav>
 </body>
+<footer class="text-center">
+        <p><strong>Chill No Copyright</strong></p>
+</footer>
 </html>
