--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
              <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quidem, culpa unde inventore repudiandae aliquam, temporibus dolorum enim quae ex sit eos molestias iste dolor alias voluptatem obcaecati a quibusdam.</h2>
         </div>
     </div>
-    <nav class="navbar fixed-bottom navbar-light" style="background-color: darkkhaki">
-        <a class="navbar-brand">Copyright</a>
-    </nav>
 </body>
+<footer class="text-center">
+    <p><strong>Chill No Copyright</strong></p>
+</footer>
 </html>
