--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,9 @@
         <br>
         <div class="row">
             <div class="col-md-4">
+                <a href="https://tanajeannai3.github.io/giftastic/">
                 <img id="bio-image3" src="images/close-up-concept-conceptual-1029844.jpg" alt="TAna" class="img-fluid">
+                </a>
            
                 <img id="bio-image2" src="images/architecture-buildings-downtown-2246789.jpg" alt="TAna" class="img-fluid">
 
