--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,7 @@
             <div class="col-md-4">
                 <a href="https://tanajeannai3.github.io/Pyschic-Game/">
                 <img id="bio-image3" src="images/close-up-concept-conceptual-1029844.jpg" alt="TAna" class="img-fluid">
+                <p>Pyschic Game</p> 
                 </a>
            
                 <a href= "https://tanajeannai3.github.io/giftastic/">
@@ -58,7 +59,7 @@
                 
             </div>
             <div class="col-md-4">
-                <img id="bio-image5" src="images/asphalt-empty-highway-2990770.jpg" alt="TAna" class="img-fluid">
+                <img id="bio-image5" src="images/asphalt-empty-highway-2990770.jpg" alt="TAna" class="img-fluid"> 
 
                 <img id="bio-image2" src="images/large.jpg" alt="TAna" class="img-fluid">
 
