--- a/portfolio.html
+++ b/portfolio.html
@@ -43,15 +43,18 @@
            
                 <a href= "https://tanajeannai3.github.io/giftastic/">
                 <img id="bio-image2" src="images/architecture-buildings-downtown-2246789.jpg" alt="TAna" class="img-fluid">
+                <p>Giphy Search</p> 
                 </a>
 
                 <img id="bio-image2" src="images/pexels-photo-2179483.jpeg" alt="TAna" class="img-fluid">
             </div>
+
             <div class="col-md-4">
                 <img id="bio-image6" src="images/female-fingers-girl-2965505.jpg" alt="TAna" class="img-fluid">
 
-                <a href="https://twitter.com/teejeannai3">
+                <a href="https://Instagram.com/teejeannai3">
                 <img id="bio-image1" src="images/apartment-architectural-design-architecture-1115804.jpg"  alt="TAna" class="img-fluid">
+                <p>Social Media Info</p> 
                 </a>
                 
                 <img id="bio-image4" src="images/blur-botanical-close-up-2522085.jpg" alt="TAna" class="img-fluid">
