Train Time app added

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,8 +62,10 @@
                 
             </div>
             <div class="col-md-4">
+                <a href=" https://tanajeannai3.github.io/Train_Time/">
                 <img id="bio-image5" src="images/asphalt-empty-highway-2990770.jpg" alt="TAna" class="img-fluid"> 
-
+                <p>Train Time</p> 
+                </a>
                 <img id="bio-image2" src="images/large.jpg" alt="TAna" class="img-fluid">
 
                 <img id="bio-image2" src="images/pexels-photo-2555635.jpeg" alt="TAna" class="img-fluid">
