adding project one

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,9 +56,10 @@
                 <img id="bio-image1" src="images/apartment-architectural-design-architecture-1115804.jpg"  alt="TAna" class="img-fluid">
                 <p>Social Media Info</p> 
                 </a>
-                
+                <a href="https://tanajeannai3.github.io/Lookie-Database/">
                 <img id="bio-image4" src="images/blur-botanical-close-up-2522085.jpg" alt="TAna" class="img-fluid">
-
+                <p>Project #1</p>
+            </a>
                 
             </div>
             <div class="col-md-4">
