--- a/portfolio.html
+++ b/portfolio.html
@@ -45,8 +45,11 @@
                 <img id="bio-image2" src="images/architecture-buildings-downtown-2246789.jpg" alt="TAna" class="img-fluid">
                 <p>Giphy Search</p> 
                 </a>
-
+                
+                <a href=" https://tanajeannai3.github.io/liri-node-app/">
                 <img id="bio-image2" src="images/pexels-photo-2179483.jpeg" alt="TAna" class="img-fluid">
+                <p>Liri Node App</p>
+                </a>
             </div>
 
             <div class="col-md-4">
