--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,10 @@
             </div>
 
             <div class="col-md-4">
+                <a href="https://rocky-mesa-33252.herokuapp.com/">
                 <img id="bio-image6" src="images/female-fingers-girl-2965505.jpg" alt="TAna" class="img-fluid">
+                <p>Flappy Pac</p>
+                </a>
 
                 <a href="https://Instagram.com/teejeannai3">
                 <img id="bio-image1" src="images/apartment-architectural-design-architecture-1115804.jpg"  alt="TAna" class="img-fluid">
